# stress-release-by-particles

./: .gitignore  CMakeLists.txt  Makefile  README.md  gradle.properties
.github/workflows/: android.yml  linux.yml  web.yml  windows.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: resources
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/ovh/maicongamedev/antistressparticles/: DisplayManager.java  NativeLoader.java  SoftKeyboard.java
app/src/main/java/ovh/maicongamedev/stressreleasebyparticles/: DisplayManager.java  NativeLoader.java  SoftKeyboard.java
assets/: atlas.ase  creature1.ase  spaceship01.blend  spaceship01.blend1  spaceship01.gltf
src/: game_manager.e  game_manager.h  game_manager_nopixel.e  main.c  main.ex  raylib64.e
